# mirassolBotCriarFaturas

./: .env  .gitignore  Documentos.xlsx  bot.py  main.py  pyproject.toml  readme.md  requirements.txt
docs/: example.xlsx
src/main/: controle_execucao.py  main.py
