[project]
name = "botcriarfatura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "abrir-rodopar",
    "botcity-framework-core>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyperclip>=1.11.0",
]

[tool.uv.sources]
abrir-rodopar = { git = "https://github.com/eualanteixeira/mirassol_abrir_rodopar.git" }
